--- a/GitInPractice.asciidoc
+++ b/GitInPractice.asciidoc
@@ -1,3 +1,3 @@
-Git In Practice - update 5 
+Git In Practice - update 6 in chapter-two6 in chapter-two6 in chapter-two6 in chapter-two6 in chapter-two6 in chapter-two 
 
 
